updates to normalization

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ class="section level4">
 <ul>
 <li><a href="https://simonvandekar.bitbucket.io/">Simon
 Vandekar</a></li>
-<li>Coleman Harris</li>
+<li><a href="https://colemanrharris.me/">Coleman Harris</a></li>
 </ul>
 <p><br></p>
 </div>
