--- a/MI_normalization.html
+++ b/MI_normalization.html
@@ -401,7 +401,9 @@ lung_df  = lung_df %&gt;% filter(patient_id %in% ids)</code></pre>
 <h2>Normalization</h2>
 <p>We will use the <code>mxnorm</code> package to normalize the lung
 data. More examples for working with this package are available in the
-package vignette.</p>
+<a
+href="https://cran.r-project.org/web/packages/mxnorm/vignettes/mxnorm-vignette.html">package
+vignette</a>.</p>
 <div id="setting-up-mx_dataset-object" class="section level3">
 <h3>Setting up <code>mx_dataset</code> object</h3>
 <p>The <code>mxnorm</code> package uses an S3 object-oriented framework
@@ -477,13 +479,13 @@ summary(mx_norm)
 ## 
 ## Anderson-Darling tests:
 ##       table mean_test_statistic mean_std_test_statistic mean_p_value
-##  normalized              69.816                  15.396            0
-##         raw             168.201                  45.203            0
+##  normalized              81.924                  19.064            0
+##         raw             196.099                  53.654            0
 ## 
 ## Threshold discordance scores:
 ##       table mean_discordance sd_discordance
-##  normalized            0.039          0.043
-##         raw            0.098          0.101</code></pre>
+##  normalized            0.047          0.051
+##         raw            0.103          0.105</code></pre>
 <p>Lower values of these metrics indicate better normalization.</p>
 </div>
 <div id="plotting" class="section level3">
@@ -547,7 +549,10 @@ otsu_data %&gt;%
              shape = 23, size = point_size) +
   labs(x = &quot;discordance score&quot;, y = &quot;slide_id&quot;)</code></pre>
 <p><img src="MI_normalization_files/figure-html/discordance_mxnorm-1.png" width="90%" /></p>
-<pre class="r"><code>rm(mx_data, mx_norm, mean_vals, otsu_data, discordance_score, ids, markers, point_size, mx_df)</code></pre>
+<p>It is also possible to evaluate user-defined normalization using the
+<code>mxnorm</code> package. See <a
+href="https://cran.r-project.org/web/packages/mxnorm/vignettes/mxnorm-vignette.html#user-defined-normalization">here</a>
+in the package vignette for an example.</p>
 </div>
 </div>
 <div id="references" class="section level2">
