update to spatial summary statistics

--- a/MI_spatialAnalysis.html
+++ b/MI_spatialAnalysis.html
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://juliawrobel.com/MI_tutorial/">
+  <a href="https://github.com/julia-wrobel/MI_tutorial">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -390,7 +390,7 @@ multiplex imaging data.</p>
 library(patchwork)
 
 # load processed ovarian cancer data
-load(url(&quot;https://github.com/julia-wrobel/MI_tutorial/raw/main/DataCode/ovarian.RDA&quot;))</code></pre>
+load(url(&quot;https://github.com/julia-wrobel/MI_tutorial/raw/main/Data/ovarian.RDA&quot;))</code></pre>
 <div id="visualize-point-patterns" class="section level3">
 <h3>Visualize point patterns</h3>
 <p>Below we visualize a point pattern for a single subject from the
@@ -435,9 +435,12 @@ all + cell_subset</code></pre>
 <p>The <code>spatstat</code> package in <code>R</code> has great
 resources for analyzing spatial point patterns. Let’s use the image
 above to do some exploratory analysis with spatstat.</p>
-<p>First create a spatstat<code>ppp</code> object. We will do spatial
-analysis on the the distribution of B-cells and macrophages, so subset
-to only these cell types.</p>
+<p>We will do spatial analysis on the distribution of B-cells and
+macrophages, so we subset to only these cell types, and create a
+<code>phenotype</code> variable that designates whether a cell is a B
+cell or a macrophage. Then we create a <code>ppp</code> object, which is
+what the <code>spatstat</code> package uses for storage and analysis of
+point pattern data.</p>
 <pre class="r"><code>library(spatstat)
 
 subj_df = subj_df %&gt;%
@@ -454,15 +457,17 @@ subj_df = subj_df %&gt;%
 w = convexhull.xy(subj_df$x,subj_df$y)
 
 # create ppp object as multitype point pattern
+# need to factor the marks variable for ppp object to be treated as a multitype point pattern
 ovarian_pp = ppp(subj_df$x,subj_df$y, window = w,
                  marks = factor(subj_df$phenotype))</code></pre>
 <div id="univariate-ripleys-k" class="section level3">
 <h3>Univariate Ripley’s K</h3>
-<p>Calculate Ripley’s K for B cells, then B-cells and Macrophages.</p>
+<p>First we calculate Ripley’s K for B cells.</p>
 <pre class="r"><code>k_bcell =  Kest(subset(ovarian_pp, marks == &quot;B-cell&quot;), correction = &quot;isotropic&quot;)</code></pre>
-<p>You can plot this object using spatstat to visualize the estimated K
-(<span class="math inline">\(\hat{K}^{iso}\)</span>) compared to the K
-under CSR (<span class="math inline">\(K^{pois}\)</span>).</p>
+<p>We can plot this <code>k_bcell</code> object using
+<code>spatstat</code> to visualize the estimated K (<span
+class="math inline">\(\hat{K}^{iso}\)</span>) compared to the K under
+CSR (<span class="math inline">\(K^{pois}\)</span>).</p>
 <pre class="r"><code>plot(k_bcell)</code></pre>
 <p><img src="MI_spatialAnalysis_files/figure-html/unnamed-chunk-5-1.png" width="90%" /></p>
 <p>Now visualize the K-function for macrophages in this image:</p>
@@ -474,7 +479,7 @@ plot(k_mac)</code></pre>
 and macrophages in this image. Are these statistically significant?</p>
 <p>We can test this using the <code>envelope</code> function, which
 performs Monte Carlo simulations of the K function under CSR. Plot below
-shows pointwise envelope for B-cell K function. Pointwise means that
+shows pointwise envelope for B-cell K-function. Pointwise means that
 these are performed separately for each value of <em>r</em>. Can only be
 interpreted if a specific value of <em>r</em> is chosen in advance.</p>
 <pre class="r"><code>
@@ -501,16 +506,7 @@ for a test that takes into account inhomogeneity. See
 2 cell types is independent. Deviation from the <span
 class="math inline">\(K^{pois}\)</span> line suggests a spatial
 relationship between the B-cells and macrophages in the image.</p>
-<pre class="r"><code>e_test = envelope(subset(ovarian_pp, marks == &quot;B-cell&quot;), 
-               Kest, correction = &quot;isotropic&quot;)
-## Generating 99 simulations of CSR  ...
-## 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40,
-## 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,
-## 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98,  99.
-## 
-## Done.
-
-k_biv = Kcross(ovarian_pp, &quot;B-cell&quot;, &quot;macrophage&quot;, correction = &quot;isotropic&quot;)
+<pre class="r"><code>k_biv = Kcross(ovarian_pp, &quot;B-cell&quot;, &quot;macrophage&quot;, correction = &quot;isotropic&quot;)
 
 plot(k_biv)</code></pre>
 <p><img src="MI_spatialAnalysis_files/figure-html/unnamed-chunk-8-1.png" width="90%" /></p>
@@ -577,23 +573,13 @@ rm(spatial_ls)</code></pre>
 <pre class="r"><code>
 cell_types = c(&quot;cd68&quot;, &quot;cd19&quot;)
 values =  RColorBrewer::brewer.pal(length(cell_types), &quot;Accent&quot;)
-## Warning in RColorBrewer::brewer.pal(length(cell_types), &quot;Accent&quot;): minimal value for n is 3, returning requested palette with 3 different levels
 
 
 #add an element in the `derived` object position
 df_spatialTIME &lt;- plot_immunoflo(df_spatialTIME, 
                    plot_title = &quot;sample_id&quot;,  mnames = cell_types,
                    cell_type = &quot;tissue_category&quot;)
-## Warning: `progress_estimated()` was deprecated in dplyr 1.0.0.
-## ℹ The deprecated feature was likely used in the spatialTIME package.
-##   Please report the issue at
-##   &lt;https://github.com/FridleyLab/spatialTIME/issues&gt;.
-## This warning is displayed once every 8 hours.
-## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
-## generated.
-## Warning in RColorBrewer::brewer.pal(length(mnames), &quot;Paired&quot;): minimal value for n is 3, returning requested palette with 3 different levels
-
-## Warning in RColorBrewer::brewer.pal(length(mnames), &quot;Paired&quot;): minimal value for n is 3, returning requested palette with 3 different levels</code></pre>
+</code></pre>
 <p>Calculate spatial summary metrics (calculating univariate K function
 across samples and phenotypes).</p>
 <pre class="r"><code>df_spatialTIME &lt;- ripleys_k(mif = df_spatialTIME, 
@@ -645,6 +631,9 @@ chapter, Wrobel and Vandekar</a></li>
 <li><a href="https://www.mdpi.com/2072-6694/13/12/3031">Challenges and
 Opportunities in the Statistical Analysis of Multiplex
 Immunofluorescence Data</a></li>
+<li><a
+href="https://academic.oup.com/bioinformatics/article/37/10/1452/6020255">Chervoneva,
+2022</a></li>
 </ul>
 </div>
 
