--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ Group</strong></p>
 <ul>
 <li>Debashis Ghosh</li>
 <li>Thao Vu</li>
-<li>Souvik Seal</li>
+<li><a href="https://sealx017.github.io/">Souvik Seal</a></li>
 <li>Tushar Ghosh</li>
 <li>Mansooreh Ahmadian</li>
 <li>Ben Steinhart</li>
@@ -354,6 +354,13 @@ Vandekar</a></li>
 <li><a href="https://lab.moffitt.org/fridley/">Brooke Fridley</a></li>
 <li>Alex Soupir</li>
 <li>Jose Laborde</li>
+</ul>
+<p><br></p>
+</div>
+<div id="thomas-jefferson-university" class="section level4">
+<h4>Thomas Jefferson University</h4>
+<ul>
+<li>Inna Chervoneva</li>
 </ul>
 <p><br></p>
 </div>
