--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>A short course on multiplex single-cell imaging in R</title>
 
-<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.2.1/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -304,10 +304,7 @@ imaging in R</h1>
 href="http://juliawrobel.com/">Julia Wrobel</a> for the short course
 titled “A workshop for analysis of multiplex single-cell imaging data in
 R” held at the University of Michigan Department of Biostatistics on
-April 6, 2023. Thanks to <a href="jeffgoldsmith.com">Jeff Goldsmith</a>
-for providing the <a
-href="https://github.com/jeff-goldsmith/ICAMPAM">website
-template</a>.</p>
+April 6, 2023.</p>
 <p><br></p>
 <div id="acknowledgements" class="section level3">
 <h3>Acknowledgements</h3>
